Fix: Header z-index [TMZ-474] (#264)

--- a/modules/template-parts/assets/scss/hello-plus-header.scss
+++ b/modules/template-parts/assets/scss/hello-plus-header.scss
@@ -96,6 +96,8 @@
 	padding-block-end: var(--header-box-padding-block-end);
 	padding-inline-start: var(--header-box-padding-inline-start);
 	padding-inline-end: var(--header-box-padding-inline-end);
+	position: relative;
+	z-index: $above-layer;
 
 	&.has-box-border {
 		border-bottom: var(--header-box-border-width) solid var(--header-box-border-color);
@@ -119,7 +121,7 @@
 		top: var(--header-float-height);
 		transition: top 0.5s ease-in-out;
 		width: 100%;
-		z-index: 999;
+		z-index: $top-layer;
 	}
 	
 	&.has-behavior-onscroll-scroll-up {
@@ -231,7 +233,7 @@
 
 	&__navigation {
 		order: 1;
-		z-index: 999;
+		z-index: $top-layer;
 
 		&[aria-hidden="true"] {
 			display: none;
@@ -317,7 +319,7 @@
 		position: absolute;
 		top: calc(100% + var(--header-box-padding-block-end));
 		width: auto;
-		z-index: 9;
+		z-index: $ninth-layer;
 
 		.menu-item {
 			flex-grow: 1;
